# SRE-incident-tracker

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  pyproject.toml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/incidents/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  sla.py  tasks.py  urls.py  views.py
apps/metrics/: urls.py  views.py
apps/notifications/: admin.py  email.py  models.py  slack.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py
docker/: Dockerfile  docker-compose.yml
requirements/: base.txt  development.txt
templates/emails/: daily_digest.html  incident_created.html  sla_breach.html  status_changed.html
tests/: conftest.py
tests/accounts/: test_models.py  test_views.py
tests/incidents/: test_models.py  test_tasks.py  test_views.py
tests/notifications/: test_models.py
