[tool.poetry]
name = "sre-incident-tracker"
version = "0.1.0"
description = "Internal incident and service request tracker for the Platform team"
authors = ["David Kwoba <davidwkwoba@gmail.com>"]
readme = "IMPLEMENTATION_PLAN.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.2,<5.0"
djangorestframework = ">=3.15"
djangorestframework-simplejwt = ">=5.3"
djangorestframework-api-key = ">=3.0"
django-filter = ">=24.0"
django-environ = ">=0.11"
psycopg2-binary = ">=2.9"
celery = {version = ">=5.4", extras = ["redis"]}
redis = ">=5.0"
kombu = ">=5.3"
slack-sdk = ">=3.27"
django-cors-headers = ">=4.3"
whitenoise = ">=6.7"
sentry-sdk = {version = ">=2.0", extras = ["django"]}
drf-spectacular = ">=0.27"
django-celery-beat = ">=2.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-django = ">=4.8"
pytest-cov = ">=5.0"
factory-boy = ">=3.3"
Faker = ">=24.0"
black = ">=24.0"
ruff = ">=0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]
